--- a/resources/lang/it.json
+++ b/resources/lang/it.json
@@ -23,7 +23,7 @@
     "Are you sure you would like to delete this API token?": "Vuoi davvero eliminare questo Token API?",
     "Are you sure you would like to leave this team?": "Vuoi davvero abbandonare questo Team?",
     "Are you sure you would like to remove this person from the team?": "Vuoi davvero rimuovere questa persona dal team?",
-    "Before continuing, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Un link di verifica è stato inviato alla tua mail, per verificarla. Se non vedi la mail saremo lieti di rinviarla.",
+    "Before continuing, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Prima di continuare, potresti verificare il tuo indirizzo email cliccando sul link che ti abbiamo appena inviato per email? Se non ha ricevuto l'email, saremo lieti di inviartene un'altra.",
     "Browser Sessions": "Sessioni del Browser",
     "Cancel": "Annulla",
     "Click here to re-send the verification email.": "Clicca qui per inviare nuovamente una email di verifica.",
@@ -115,7 +115,7 @@
     "Remove": "Rimuovi",
     "Remove Photo": "Rimuovi Foto",
     "Remove Team Member": "Rimuovi membro del Team",
-    "Resend Verification Email": "Invia di nuovo la mail",
+    "Resend Verification Email": "Invia di nuovo",
     "Reset Password": "Resetta la password",
     "Reset Password Notification": "Notifica di reset della password",
     "results": "risultati",
