--- a/resources/lang/it.json
+++ b/resources/lang/it.json
@@ -1,4 +1,7 @@
 {
+    "Yes": "Si",
+    "No": "No",
+    "Search in": "Cerca in",
     "(and :count more error)": "(e :count altro errore)",
     "(and :count more errors)": "(e :count altri errori)",
     "A new verification link has been sent to the email address you provided in your profile settings.": "Un nuovo link di verifica è stato inviato all'indirizzo email indicato nelle impostazioni del profilo.",
@@ -18,6 +21,7 @@
     "API Token Permissions": "Permessi del Token API",
     "API Tokens": "Token API",
     "API tokens allow third-party services to authenticate with our application on your behalf.": "I Token API consentono ai servizi di terze parti di autenticarsi con la nostra applicazione per tuo conto.",
+    "Are you sure?": "Sei sicuro?",
     "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Vuoi davvero eliminare questo Team? Una volta eliminato, tutte le sue risorse e i relativi dati verranno eliminati definitivamente.",
     "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Vuoi davvero eliminare l'account? Una volta eliminato, tutte le sue risorse ed i relativi dati verranno eliminati definitivamente. Inserisci la password per confermare che desideri eliminare definitivamente il tuo account.",
     "Are you sure you would like to delete this API token?": "Vuoi davvero eliminare questo Token API?",
